<package format="2">
  <name>xbee_python</name>
  <version>0.0.0</version>
  <description>python interface for xbee</description>

  <maintainer email="kshitijgoel16061995@gmail.com">Kshitij Goel</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
